--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@
 
 # testing
 /coverage
+/screenshotsFolder
+/videosFolder
 
 # next.js
 /.next/
@@ -30,7 +32,7 @@ yarn-error.log*
 
 # local env files
 .env
-.env.local
+.env
 .env.development.local
 .env.test.local
 .env.production.local
@@ -45,3 +47,6 @@ tsconfig.tsbuildinfo
 # IDE
 .idea
 .vscode
+
+# graphql
+src/generated
