[5] Add repositories queries.

--- a/package.json
+++ b/package.json
@@ -3,16 +3,19 @@
 	"version": "0.1.0",
 	"private": true,
 	"scripts": {
-		"build:prod": "cross-env NODE_ENV=production && next build",
-		"build:dev": "cross-env NODE_ENV=development && next build",
-		"build-storybook": "build-storybook",
+		"build": "next build",
+		"cypress": "cypress open",
+		"cypress:headless": "cypress run",
+		"cypress:unit": "cypress open-ct",
 		"dev": "next dev",
+		"e2e": "start-server-and-test start http://localhost:8080 cypress",
+		"e2e:headless": "start-server-and-test start http://localhost:8080 cypress:headless",
+		"graphql:codegen": "graphql-codegen --config codegen.yml",
 		"lint": "next lint && npm run lint:tsc",
 		"lint:staged": "lint-staged",
 		"lint:tsc": "tsc --noEmit",
 		"prettier:all": "prettier --write **/*.{ts,tsx,js,json}",
 		"start": "next start -p 8080",
-		"storybook": "start-storybook -p 6006",
 		"prepare": "is-ci || husky install",
 		"postinstall": "is-ci || husky install"
 	},
@@ -25,44 +28,54 @@
 		]
 	},
 	"dependencies": {
+		"@theme-ui/presets": "^0.11.1",
+		"antd": "^4.16.13",
+		"graphql": "^15.5.3",
+		"graphql-request": "^3.5.0",
 		"husky": "^7.0.0",
-		"is-ci": "^3.0.0",
 		"lodash": "^4.17.21",
 		"next": "11.1.2",
+		"next-plugin-antd-less": "^1.4.2",
 		"react": "17.0.2",
-		"react-dom": "17.0.2"
+		"react-dom": "17.0.2",
+		"react-query": "^3.23.0",
+		"theme-ui": "^0.11.1"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.14.6",
-		"@storybook/addon-actions": "^6.3.2",
-		"@storybook/addon-essentials": "^6.3.2",
-		"@storybook/addon-links": "^6.3.2",
-		"@storybook/builder-webpack5": "^6.4.0-alpha.9",
-		"@storybook/cli": "^6.3.2",
-		"@storybook/manager-webpack5": "^6.4.0-alpha.9",
-		"@storybook/preset-scss": "^1.0.3",
-		"@storybook/react": "^6.3.2",
+		"@cypress/react": "^5.10.0",
+		"@cypress/webpack-dev-server": "^1.6.0",
+		"@graphql-codegen/cli": "2.2.0",
+		"@graphql-codegen/introspection": "2.1.0",
+		"@graphql-codegen/typescript": "2.2.2",
+		"@graphql-codegen/typescript-operations": "2.1.4",
+		"@graphql-codegen/typescript-react-query": "^3.0.1",
+		"@testing-library/cypress": "^8.0.1",
 		"@types/lodash": "^4.14.171",
 		"@types/node": "^16.7.9",
 		"@types/react": "17.0.11",
 		"@typescript-eslint/eslint-plugin": "^4.28.1",
 		"@typescript-eslint/parser": "^4.28.1",
 		"babel-loader": "^8.2.2",
+		"babel-plugin-import": "^1.13.3",
 		"cross-env": "^7.0.3",
+		"cypress": "^8.3.1",
 		"dotenv-webpack": "^7.0.3",
 		"eslint": "7.29.0",
 		"eslint-config-next": "11.0.1",
 		"eslint-config-prettier": "^8.3.0",
 		"eslint-plugin-react": "^7.24.0",
 		"fork-ts-checker-webpack-plugin": "^6.2.12",
+		"html-webpack-plugin": "^5.3.2",
 		"lint-staged": "^11.0.0",
 		"prettier": "^2.2.1",
-		"type-fest": "^1.2.2",
+		"start-server-and-test": "^1.13.1",
 		"typescript": "4.4.2",
-		"webpack": "^5.42.1"
+		"webpack": "^5.52.1",
+		"webpack-dev-server": "^3.11.2"
 	},
 	"volta": {
-		"node": "16.8.0",
-		"yarn": "1.22.11"
+		"node": "14.17.0",
+		"npm": "7.23.0"
 	}
 }
